# todo-mcp-server

./: README.md  __main__.py  manual_test.py  pyproject.toml  requirements.txt  run_tests.sh
src/: __init__.py  __main__.py  server.py  simple_server.py  todo_manager.py  todo_parser.py
tests/: conftest.py  test_enhanced_suggestions.py  test_parser.py  test_query_tool.py  test_server.py  test_simple_server.py
tests/fixtures/: sample_todo.txt
